uid alignment fixed, media query for small(est) screen completed, general code clean up and trying to wire uid

--- a/inheritance/inheritanceapp/static/style.css
+++ b/inheritance/inheritanceapp/static/style.css
@@ -20,22 +20,22 @@ body {
 #ImgOnLandingPage {
   width: 100%;
 }
-#landingPgArtifactUID {
+.artifactInfoLandingPg {
+  position: absolute;
+  left: 50rem;
+  bottom: -7.5rem;
+}
+.landingPgArtifactUID {
   color: wheat;
-  font-size: medium;
+  font-size: xx-large;
   text-transform: lowercase;
   text-shadow: 0.031rem 0.031rem black;
-
-  position: absolute;
-  right: 20rem;
-  bottom: -9.5rem;
+  margin-right: 0.5rem;
 }
-#landingPgArtifactUID:hover {
-  color: black;
+.landingPgArtifactUID:hover {
+  color: darkblue;
   cursor: pointer;
-  transform: scale(1.5);
-  transition: all 1.75s;
-  text-shadow: 0.031rem 0.031rem whitesmoke;
+  text-shadow: 0.031rem 0.031rem turquoise;
 }
 .landingPgArtifactDescr {
   width: 25%;
@@ -43,11 +43,6 @@ body {
   font-size: smaller;
   text-transform: lowercase;
   text-shadow: 0.031rem 0.031rem black;
-  text-align: justify;
-
-  position: absolute;
-  right: 2.313rem;
-  bottom: -15.313rem;
 }
 button,
 #symbolicRelease,
@@ -447,17 +442,36 @@ label.form-check-label {
     border-color: tomato;
 } */
 
-/* MEDIA QUERIES FOR HIGH DEF MOCK LANDING PAGE CONTENT */
-@media only screen and (max-width: 498px) {
-  .landingPgArtifactDescr {
-    min-width: 80%;
-    bottom: -11.5rem;
+/* MEDIA QUERIES FOR LANDING PAGE CONTENT */
+@media only screen and (min-width: 486.1px) {
+  #bigViewDiv {
+    display: visible;
+  }
+  #tinyViewDiv {
+    display: none;
   }
 }
-/* CURRENTLY SET TO HIDE ALL BODY CONTENT AT THIS SCREEN SIZE IDEALLY WOULD INSTEAD DISPLAY TEXT PROMPT TO VISIT SITE ON A LARGER SCREEN/DEVICE */
+/* CURRENTLY SET TO HIDE ALL BODY CONTENT AT THIS SCREEN SIZE AND PROMPTS TO VISIT SITE ON A LARGER SCREEN/DEVICE */
 @media only screen and (max-width: 486px) {
-  body {
-    visibility: hidden;
+  #bigViewDiv {
+    display: none;
+  }
+  #tinyViewDiv {
+    display: visible;
+  }
+  img#inheritanceLogo {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  h1 {
+    text-align: center;
+    font-weight: bold;
+    font-size: xx-large;
+  }
+  p {
+    font-size: medium;
+    text-align: center;
   }
 }
 
